[feat] swagger auth header support
