# backend/api/v1/user.go
@@ -9,11 +9,12 @@ import (
 
 // GetProfile
 // @Summary 获取用户Profile
+// @Security ApiKeyAuth
 // @Tags Profile
 // @Accept json
 // @Produce json
 // @Success 200 {object} response.Response{data=service.ProfileResponse}
-// @Router /api/v1/profile [get]
+// @Router /api/v1/user/profile [get]
 func GetProfile(c *gin.Context) {
 	uuid := c.MustGet("uuid").(string)
 
@@ -27,12 +28,13 @@ func GetProfile(c *gin.Context) {
 
 // UpdateProfile
 // @Summary 更新用户Profile（部分字段）
+// @Security ApiKeyAuth
 // @Tags Profile
 // @Accept json
 // @Produce json
 // @Param data body service.UpdateProfileInput true "需要更新的字段"
 // @Success 200 {object} response.Response
-// @Router /api/v1/profile [post]
+// @Router /api/v1/user/profile [post]
 func UpdateProfile(c *gin.Context) {
 	uuid := c.MustGet("uuid").(string)
 
