# backend/docs/swagger.json
@@ -4,8 +4,9 @@
         "contact": {}
     },
     "paths": {
-        "/api/v1/auth/email_login": {
+        "/api/v1/auth/email/send": {
             "post": {
+                "description": "用户点击\"获取验证码\"按钮，系统向用户提供的邮箱发送6位验证码，用户需要在申请表单中填入验证码才可以成功完成身份验证，否则不应该可以提交申请。验证码时限为10分钟，超时无效",
                 "consumes": [
                     "application/json"
                 ],
@@ -15,7 +16,65 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "邮箱验证码登录",
+                "summary": "获取申请验证码",
+                "parameters": [
+                    {
+                        "description": "data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/response.GetVerifyCodeQ"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"msg\": \"邮件发送成功\",\"status\": 200}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "{\"msg\": \"数据格式错误\", \"status\": 400}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "{\"msg\": \"没有该用户\", \"status\": 401}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "402": {
+                        "description": "{\"msg\": \"验证码存储失败\",\"status\": 402}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "403": {
+                        "description": "{\"msg\": \"发送邮件失败\",\"status\": 403}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/auth/email/verify": {
+            "post": {
+                "description": "验证邮箱验证码是否正确,如果正确则登录或注册用户",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "邮箱验证码验证",
                 "parameters": [
                     {
                         "description": "邮箱+验证码",
@@ -135,8 +194,13 @@
                 }
             }
         },
-        "/api/v1/profile": {
+        "/api/v1/user/profile": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -169,6 +233,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -234,6 +303,17 @@
         }
     },
     "definitions": {
+        "response.GetVerifyCodeQ": {
+            "type": "object",
+            "required": [
+                "email"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                }
+            }
+        },
         "response.Response": {
             "type": "object",
             "properties": {
@@ -338,6 +418,14 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "description": "JWT Token",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
